fixes overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,9 @@
-html {
-  background-color: #f1f5f9;
-  font-family: sans-serif;
+html,
+body {
+  height: 100%; /* Full height */
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; /* Prevents horizontal scroll */
 }
 
 body {
@@ -9,6 +12,10 @@ body {
   max-width: 80ch;
   padding: 1rem;
   line-height: 1.5;
+  min-height: calc(100vh - 2rem);
+  display: flex;
+  flex-direction: column;
+  background-color: #ecd2cb;
 }
 
 * {
@@ -30,10 +37,12 @@ nav {
 }
 
 .main-container {
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100vh;
+  overflow-y: auto;
+  padding: 1rem;
 }
 
 .hamburger {
